...
    <string name="store_ingredient_amount_display">%1$.2f %2$s</string>
    <string name="shop_ingredient_amount_display">%1$.2f %2$s</string>
    <string name="store_ingredient_location_display">Location: %1$s</string>
    <string name="store_ingredient_date_display">%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navbar_fab">Multipurpose FAB in Navbar</string>
    <string name="add_location">Add Location</string>
    <string name="go_back">Back</string>
    <string name="add_units">Add Unit</string>
    <string name="loading">loading...</string>
    <string name="add_category">Add Category</string>
    <string name="signup">Signup</string>
</resources>
